--- a/react-router/package.json
+++ b/react-router/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://www.example.com/your-app",
+  "homepage": "https://sebpo-shahin.github.io/React-Tiki/",
   "name": "react-router",
   "version": "0.1.0",
   "private": true,
